--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+
+:root {
+	--primary: 214 122 105;
+}
